--- a/app/views/accounts/transaction.jade
+++ b/app/views/accounts/transaction.jade
@@ -1,7 +1,7 @@
 extends ../shared/template
 block content
   h1 #{account.name + '\'s ' + account.type + 'Account'}
-  form(method='post', href='/accounts/#{account._id}/transaction')
+  form(method='post', action='/accounts/#{account._id}/transaction')
     p Transaction Type
     label Deposit
     input(type='radio', name='type', value='Deposit')
